fixed editor overflowing modal and did some refactoring

--- a/teach-me-ui/src/styles/Main/_Notifications.scss
+++ b/teach-me-ui/src/styles/Main/_Notifications.scss
@@ -37,7 +37,7 @@
   }
 
   .notification-container {
-    overflow: scroll;
+    overflow: auto;
     overflow-x: hidden;
     background: white;
     width: 29rem;
