--- a/teach-me-ui/src/styles/crumbs/_Upload.scss
+++ b/teach-me-ui/src/styles/crumbs/_Upload.scss
@@ -81,7 +81,7 @@
 }
 
 .scroll-image {
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 250px;
   width: 100%
 }
